<resources>
    <string name="app_name">Event Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Home">Home</string>
    <string name="Calendar">Calendar</string>
    <string name="Create">Create</string>
    <string name="Chat">Chat</string>
    <string name="Notifications">Notifications</string>
    <string name="Reports">Reports</string>
    <string name="Comments">Comments</string>

    <string name="PlaceholderName">Firstname Lastname</string>
    <string name="PlaceholderNotLogged">Not logged in</string>

    <string name="DrawerProfile">My Profile</string>
    <string name="DrawerFavourites">Favourites</string>
    <string name="DrawerBlocked">Blocked users</string>
    <string name="DrawerSettings">Settings</string>
    <string name="DrawerLogout">Log out</string>
    <string name="DrawerLogin">Log in</string>
    <string name="DrawerRegister">Register account</string>
    <string name="DrawerReports">Users reports</string>
    <string name="DrawerComments">Users comments</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="filters">Filters</string>
    <string name="search">Search</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="notBefore">Not before</string>
    <string name="notAfter">Not after</string>
    <string name="guestsLimit">Guests limit</string>
    <string name="eventType">Event type</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="grade">Grade</string>
    <string name="isAvailable">Is available</string>
    <string name="category">Category</string>
    <string name="serviceProductNameHint">Name</string>
    <string name="minPrice">Min price</string>
    <string name="maxPrice">Max price</string>
    <string name="serviceOnly">Service only:</string>
    <string name="minDuration">Min duration</string>
    <string name="maxDuration">Max duration</string>
    <string name="onlyProducts">Only products</string>
    <string name="onlyServices">Only services</string>
    <string name="showBoth">Products and services</string>
    <string name="topEventList">Top events</string>
    <string name="topServiceList">Top services</string>
    <string name="topProductList">Top products</string>
    <string name="swipeRight">Swipe right</string>
    <string name="productAndServices">PRODUCTS &amp; SERVICES </string>
    <string name="events">EVENTS</string>
    <string name="trending">TRENDING</string>
    <string name="name">Name</string>
    <string name="minEngagement">Min engagement</string>
    <string name="maxEngagement">Max engagement</string>
    <string name="reservationDeadline">Reservation\ndeadline (days)</string>
    <string name="cancelationDeadline">Cancelation\ndeadline (days)</string>
    <string name="serviceDuration">Service duration</string>
    <string name="serviceDescription">Service description</string>
    <string name="serviceSpecificities">Service specificities</string>
    <string name="newCategory">New category</string>
    <string name="newCategoryDescription">New category description</string>
    <string name="visibleForEventOrganizer">Visible for event organizer</string>
    <string name="recommendNewCategory">Recommend new category</string>
    <string name="fixedServiceDuration">Fixed service duration</string>
    <string name="uploadImages">Upload images</string>
    <string name="availableForReservation">Available for reservation</string>
    <string name="cities">Cities</string>
    <string name="company">Company</string>
    <string name="makeReservation">Make reservation</string>
    <string name="login_features">Log in or register to access more features</string>
    <string name="addToFavourites">Add to favourites</string>
    <string name="provider">Provider</string>
    <string name="chatWithProvider">Chat with provider</string>
    <string name="addReview">Add review</string>
    <string name="sortBy">Sort by:</string>
    <string name="order">Order: </string>
    <string name="firstName">First name:</string>
    <string name="lastName">Last name:</string>
    <string name="register">Register</string>
    <string name="givenEmail">Email</string>
    <string name="givenPassword">Password</string>

    <string name="quickRegistrationText">To use additional features promote account to Service Product Provider or Event Organizer!</string>

    <string name="viewMore">View more</string>
    <string name="viewLess">View less</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="createEvent">Create event</string>
    <string name="invitations">Invitations</string>
    <string name="approve">Approve</string>

    <string name="yourChats">Your chats</string>
    <string name="enterText">Enter text</string>

    <string name="placeholderText">Placeholder text</string>
    <string name="placeholderNumber">##.##</string>
    <string name="placeholderDescription">Lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum</string>

    <string name="addFavourite">Add to favourites</string>
    <string name="viewPProvider">View product provider</string>
    <string name="reportUser">Report this user</string>
    <string name="chatUser">Chat with this user</string>

    <string name="product_image">Image of the product</string>
    <string name="title_activity_user_details">UserDetailsActivity</string>

    <string name="tap_event">Tap event for more details</string>

</resources>