<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/nameSearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="17"
            android:hint="@string/serviceProductNameHint"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.101" />

        <TextView
            android:id="@+id/serviceProductCategory"
            android:layout_width="145dp"
            android:layout_height="48dp"
            android:background="@color/light_gold"
            android:gravity="left|center_vertical"
            android:hint="@string/category"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/nameSearch"
            app:layout_constraintTop_toBottomOf="@id/nameSearch"
            app:layout_constraintVertical_bias="0.042" />

        <EditText
            android:id="@+id/serviceProductCountry"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="7"
            android:hint="Country"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/serviceProductCategory"
            app:layout_constraintTop_toBottomOf="@id/serviceProductCategory"
            app:layout_constraintVertical_bias="0.054" />


        <EditText
            android:id="@+id/citySearch"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="7"
            android:hint="City"
            android:inputType="text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nameSearch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/serviceProductMinPrice"
            app:layout_constraintTop_toBottomOf="@id/serviceProductCategory"
            app:layout_constraintVertical_bias="0.052" />

        <EditText
            android:id="@+id/serviceProductMaxPrice"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="4"
            android:hint="@string/maxPrice"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nameSearch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/serviceProductCategory"
            app:layout_constraintTop_toTopOf="@id/serviceProductCategory"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/serviceProductMinPrice"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="4"
            android:hint="@string/minPrice"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nameSearch"
            app:layout_constraintHorizontal_bias="0.275"
            app:layout_constraintStart_toEndOf="@id/serviceProductCategory"
            app:layout_constraintTop_toTopOf="@id/serviceProductCategory"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/serviceOnlyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/serviceOnly"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/serviceProductCountry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/serviceProductCountry"
            app:layout_constraintTop_toBottomOf="@id/serviceProductCountry"
            app:layout_constraintVertical_bias="0.083" />

        <EditText
            android:id="@+id/serviceMinDuration"
            android:layout_width="wrap_content"
            android:layout_height="48dp"

            android:background="@color/white"
            android:ems="5"
            android:hint="@string/minDuration"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/serviceProductMinPrice"
            app:layout_constraintHorizontal_bias="0.414"
            app:layout_constraintStart_toEndOf="@id/serviceOnlyLabel"
            app:layout_constraintTop_toBottomOf="@id/citySearch"
            app:layout_constraintVertical_bias="0.068" />

        <EditText
            android:id="@+id/serviceMaxDuration"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:background="@color/white"

            android:ems="5"
            android:hint="@string/maxDuration"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/nameSearch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/serviceMinDuration"
            app:layout_constraintTop_toBottomOf="@id/citySearch"
            app:layout_constraintVertical_bias="0.068" />


        <Button
            android:id="@+id/eventsFilterSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/lighter_red"
            android:text="@string/search"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toTopOf="@id/nameSearch"
            app:layout_constraintEnd_toEndOf="@id/nameSearch"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:layout_width="200dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/serviceOnlyLabel"
            app:layout_constraintTop_toBottomOf="@id/serviceOnlyLabel"
            app:layout_constraintVertical_bias="0.117">

            <RadioButton
                android:id="@+id/showBothRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showBoth"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/serviceOnlyLabel"
                app:layout_constraintTop_toBottomOf="@id/serviceOnlyLabel"
                app:layout_constraintVertical_bias="0.07"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/onlyProductsRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onlyProducts"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/serviceOnlyLabel"
                app:layout_constraintTop_toBottomOf="@id/serviceOnlyLabel"
                app:layout_constraintVertical_bias="0.07" />

            <RadioButton
                android:id="@+id/onlyServicesRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onlyServices"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/serviceOnlyLabel"
                app:layout_constraintTop_toBottomOf="@id/onlyProductsRadioButton"
                app:layout_constraintVertical_bias="0.0" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>