<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".fragments.QuickRegistrationForm">


    <TextView
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start"
        android:text="@string/givenEmail"
        android:textColor="@color/blackreversable"
        app:layout_constraintBottom_toTopOf="@id/givenEmail"
        app:layout_constraintStart_toStartOf="@id/givenEmail" />

    <TextView
        android:id="@+id/givenEmail"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="100dp"
        android:background="@color/neutral"
        android:ems="10"
        android:gravity="center"
        android:text="Email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start"
        android:text="@string/givenPassword"
        android:textColor="@color/blackreversable"
        app:layout_constraintBottom_toTopOf="@id/givenPassword"
        app:layout_constraintStart_toStartOf="@id/givenEmail" />
    <TextView
        android:id="@+id/givenPassword"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:background="@color/neutral"
        android:ems="10"
        android:gravity="center"
        android:text="Password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/givenEmail"
        app:layout_constraintTop_toBottomOf="@id/givenEmail" />

    <EditText
        android:id="@id/firstNameInput"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="68dp"
        android:background="@color/white"
        android:hint="@string/firstName"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@id/givenEmail"
        app:layout_constraintTop_toBottomOf="@id/givenPassword" />

    <EditText
        android:id="@id/lastNameInput"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="36dp"
        android:background="@color/white"
        android:hint="@string/lastName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintStart_toStartOf="@id/givenEmail"
        app:layout_constraintTop_toBottomOf="@id/firstNameInput" />

    <Button
        android:id="@id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/secondary"
        android:text="Register"
        app:cornerRadius="5dp"
        app:layout_constraintStart_toStartOf="@id/givenEmail"
        app:layout_constraintTop_toBottomOf="@id/lastNameInput" />

    <TextView
        android:id="@+id/editTextText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:ems="15"
        android:text="@string/quickRegistrationText"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerButton" />
</androidx.constraintlayout.widget.ConstraintLayout>