<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.home_screen_fragments.HomeScreenFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="11"
        android:background="@color/secondary">
        <TextView
            android:id="@+id/trendingText"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:textColor="@color/white"
            android:text="@string/trending"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"
            android:paddingStart="20dp"/>

        <TextView
            android:id="@+id/eventsText"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:text="@string/events"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/servicesAndProductsText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:focusableInTouchMode="true"
            android:textColor="@color/white"
            android:text="@string/productAndServices"
            android:textStyle="bold"
            android:textSize="15sp"
            android:gravity="center"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/homeScreenFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout="@layout/fragment_top_lists_tab"
        android:layout_weight="1"/>

</LinearLayout>